# ELEC330

./: .gitignore  .gitmodules  Makefile  TODO.md  inference.py  notes.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
ass1/: CMakeLists.txt  package.xml
ass1/launch/: empty_world.launch
ass1/meshes/: trunk.stl  wheel.stl
ass1/report/: main.tex  preamble.tex
ass1/report/back_matter/: appendices.tex
ass1/report/body/: executive_summary.tex
ass1/report/front_matter/: cover.tex
ass1/urdf/: manmaru.urdf.xacro
ass2/: CMakeLists.txt  package.xml  requirements.txt
ass2/launch/: amcl.launch  face_detector.launch  gazebo.launch  gmapping.launch  joint_state_publisher.launch  main.launch  manipulator.launch  map_server.launch  move_base.launch  object_detector.launch  robot_state_publisher.launch  rviz.launch
ass2/maps/: indoor.pgm  map.pgm
ass2/models/Himemori_Luna/: model.config  model.sdf
ass2/models/Himemori_Luna/meshes/: TEX_LNA_Dress.tga  TEX_LNA_Eye.tga  TEX_LNA_Hyojou.tga  TEX_LNA_Mayu_Clear.tga  TEX_LNA_Metal.tga
ass2/models/classroom/: model.config  model.sdf
ass2/models/coffee_cup_chair/: model.config  model.sdf
ass2/models/coffee_cup_chair/meshes/: coffee_cup_chair.dae
ass2/models/groundfloor/: model.config  model.sdf
ass2/nodes/: face_detector.py  object_detector.py
ass2/params/: base_local_planner.yaml  costmap_common.yaml  local_costmap.yaml  manipulator.yaml  move_base.yaml
ass2/report/: main.tex  preamble.tex
ass2/report/back_matter/: appendices.tex
ass2/report/body/: executive_summary.tex
ass2/report/front_matter/: contents.tex  cover.tex
ass2/rviz/: ass2.rviz
ass2/worlds/: classroom.sdf  indoor.sdf
ass3/report/: main.tex  preamble.tex  references.bib
ass3/report/back_matter/: appendices.tex
ass3/report/body/: executive_summary.tex
ass3/report/front_matter/: cover.tex
lab5/woodhouse/: model.config  model.sdf
lab7/: CMakeLists.txt  package.xml
lab7/launch/: indoor.launch
lab7/worlds/: indoor.sdf
learning_quaternion/: CMakeLists.txt  package.xml
learning_quaternion/src/: components.cxx  msg2tf.cxx
learning_tf2/: CMakeLists.txt  package.xml
learning_tf2/launch/: start_demo.launch
learning_tf2/src/: frame_tf2_broadcaster.cpp  turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
learning_urdf/: CMakeLists.txt  package.xml
learning_urdf/launch/: 09-joints.launch  13-diffdrive.launch  gazebo.launch
learning_urdf/urdf/: 13-diffdrive.urdf.xacro
manmaru_description/: CMakeLists.txt  package.xml
manmaru_description/meshes/: base.stl  wheel.stl
manmaru_description/urdf/: gazebo.urdf  lidar.urdf.xacro  manipulator.urdf.xacro  manmaru.urdf.xacro
testbot_description/: CMakeLists.txt  package.xml
testbot_description/src/: parser.c++
