<?xml version="1.0"?>
<package format="2">
  <name>ass2</name>
  <version>0.0.0</version>
  <description>The ass2 package</description>

  <maintainer email="nobody@nowhere.com">Unmaintained</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <!--
    https://github.com/ros/rosdistro/blob/master/rosdep/python.yaml
    https://index.ros.org/d/python-pytorch-pip/
    rosdep install ass2
  -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-rospkg</exec_depend>

</package>
