<?xml version="1.0"?>
<package format="2">
  <name>learning_quaternion</name>
  <version>0.0.0</version>
  <description>The learning_quaternion package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

</package>
