<?xml version="1.0"?>
<package format="2">
  <name>manmaru_description</name>
  <version>0.0.0</version>
  <description>The manmaru_description package</description>

  <maintainer email="sgmxu9@liverpool.ac.uk">Minghong Xu</maintainer>

  <license>ISC</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
