<?xml version="1.0"?>
<package format="2">
  <name>testbot_description</name>
  <version>0.0.0</version>
  <description>The testbot_description package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

</package>
